# openemr-base-clean

./: .env.deploy.example  .gitignore  .gitlab-ci.yml  ACCESS.md  ARCHITECTURE.md  AUDIT.md  COST_ANALYSIS.md  Caddyfile.example  Caddyfile.https.example  DEPLOY.md  NOTES.md  OBSERVABILITY.md  README.md  RUNLOG.md  USERS.md  W2_ARCHITECTURE.md  WALKTHROUGH.md  codegraph.json  docker-compose.deploy.yml
agent/: .gitignore  COMPLIANCE.md  Dockerfile  LANGFUSE_SETUP.md  README.md  alembic.ini  pyproject.toml
agent/artifacts/: latency_report.json
agent/copilot/: __init__.py  config.py  resilience.py
agent/corpus/: LICENSES.md  aki-inpatient-management.md  anticoagulation-warfarin-reversal.md  dka-adult-inpatient.md  sepsis-early-management.md
agent/evals/: EVAL_RESULTS.md  __init__.py  _fake_openemr.py  eval_dataset.jsonl  eval_results.json  gate.py  gate_baseline.json  gate_dataset.jsonl  golden_dataset.jsonl  lifecycle_phi_corpus.py  live_cases.py  rubrics.py  run_evals.py  test_gate.py  test_grounding_evals.py  test_lifecycle_phi_corpus.py
agent/migrations/: env.py
agent/openapi/: week2.yaml
agent/research/: BUILD_PLAN_TEMPORAL.md  CDS_TREATMENT_RECOMMENDATIONS.md
agent/scripts/: audit_retention_sweep.py  dump_openapi.py  ingest_guidelines.py  latency_report.py  register_backend_client.py  register_smart_app_client.py
agent/tests/: conftest.py  test_agent_factory.py  test_allergy_reaction_carry.py  test_audit.py  test_auth_cutover_routes.py  test_auth_routes.py  test_auth_session.py  test_authz_routes.py  test_background_routes.py  test_chat_conversation_authz.py  test_chat_critic_gate.py  test_chat_graph.py  test_chat_graph_response.py  test_chat_routes.py  test_citation_contract.py  test_claude_agent.py  test_claude_agent_hide_input.py  test_config_blank_env.py  test_cors.py  test_critic_realness.py  test_critic_unsafe_withholds.py  test_deidentify_adversarial.py  test_deidentify_label_scope.py  test_delegated_token_cutover.py  test_dockerfile_carries_status_artifacts.py  test_document_read_authz.py  test_documents_authz_ordering.py  test_documents_hide_input.py  test_domain_primitives.py  test_domain_rules_enrichment.py  test_extraction_schema_contract.py  test_fhir_auth.py  (+92 more)
(+326 files in other folders)
