[project]
name = "copilot"
version = "0.1.0"
description = "Clinical Co-Pilot agent service — FastAPI + Pydantic AI, reads OpenEMR via FHIR only."
requires-python = ">=3.12,<3.13"
readme = "README.md"

# Runtime deps only. Dev deps live under [project.optional-dependencies.dev].
# Pinned to the versions ARCHITECTURE.md calls out where applicable.
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "alembic>=1.13,<2",
    "greenlet>=3,<4",
    "psycopg[binary]>=3.2,<4",
    "httpx>=0.27,<0.29",
    "anthropic>=0.40,<1",
    "apscheduler>=3.10,<4",
    "authlib>=1.3,<2",
    "cryptography>=43,<45",
    "python-json-logger>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<7",
    "respx>=0.22,<1",
    "ruff>=0.7,<1",
    "mypy>=1.11,<2",
    "aiosqlite>=0.20,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["copilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]
markers = [
    "llm: requires ANTHROPIC_API_KEY — skipped when absent",
]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    # SQLAlchemy 2 + aiosqlite emits a DeprecationWarning inside its own stack.
    "ignore::DeprecationWarning:sqlalchemy.*",
    "ignore::DeprecationWarning:aiosqlite.*",
    # Alembic's env.py runs migrations under asyncio.run(), which creates a
    # loop that GC'd engines from earlier tests then flag as unclosed. Not a
    # real leak — just cross-test bookkeeping between pytest-asyncio and
    # alembic's synchronous entry point.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # ruff format handles line length

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
